# EventManagement

./: .gitignore  CMakeLists.txt  Evento.cpp  Evento.h  GerenciadorEventos.cpp  GerenciadorEventos.h  INTEGRACAO_C++.md  PAGINAS_SEPARADAS.md  POPUP_CONFIRMACAO.md  Participante.cpp  Participante.h  README.md  eventos.txt  eventos_test.json  index.html  index.md  main.cpp  package-lock.json  package.json  run.ps1  run_backend.bat  run_backend.ps1  server.js  simple_cpp_server.cpp  start_server.bat  style.css  test_system.bat  vcpkg.json
backend/: .gitignore  EventoBase.cpp  EventoBase.h  GerenciadorEventos.h  Organizador.h  Participante.cpp  compilar_demo_heranca.bat  compile_main.bat  compile_server.bat  compile_simple.bat  eventos.txt
backend/frontend/: styles.css
backend/scripts/: compilar_demo_heranca.bat  compile_main.bat  compile_server.bat  compile_simple.bat
backend/src/: ApiServer.cpp  Event.cpp  EventManager.cpp  Evento.h  EventoBase.h  GerenciadorEventos.cpp  GerenciadorEventos.h  Participant.cpp  Participante.cpp  Participante.h  Person.cpp  Pessoa.cpp  demo_heranca.cpp  main.cpp  simple_cpp_server.cpp
backend/src/include/: ApiServer.h  Event.h  EventManager.h  Participant.h  Person.h  Pessoa.h
frontend/: ESTRUTURA.md  README.md  admin.html  app.js  index.html  styles.css
frontend/js/: admin.js  config.js  inscricoes.js
frontend/js/components/: Dashboard.js  EventForm.js  EventList.js  EventoForm.js  EventoList.js  ParticipantForm.js
frontend/js/services/: apiService.js
public/: index.html  script.js  styles.css
src/: main.cpp
(+5 files in other folders)
